--- a/views/chatbox.html
+++ b/views/chatbox.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title> CPS 449: Team 6's Home Page</title>
+        <title> CPS 449: Team 6's Chat Bot</title>
         <script src="https://udayton-cloud.bitbucket.io/clock.js"></script>
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"
                 integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
@@ -26,11 +26,11 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>                        
                 </button>
-                <a class="navbar-brand" href=/../index.html>Team 6</a>
+                <a class="navbar-brand" href=/../index.html>Home</a>
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
-                  <li><a href="views/chatbox.html">Chat Bot</a></li>
+                  <li><a href="chatbox.html">Chat Bot</a></li>
                   <li><a href=#>2</a></li>
                   <li><a href=#>3</a></li>
                 </ul>
