--- a/stylesheet.css
+++ b/stylesheet.css
@@ -72,7 +72,7 @@ p {font-size: 16px;}
 
 /* Picture card styling */
 .picture-card {
-    background: #271808;
+    background-color: #271808;
     padding: 20px;
     margin-bottom: 20px;
     border-radius: 8px;
