--- a/views/chatbox.html
+++ b/views/chatbox.html
@@ -29,9 +29,8 @@
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
-                  <li><a href="chatbox.html">Chat Bot</a></li>
-                  <li><a href=#>2</a></li>
-                  <li><a href=#>3</a></li>
+                  <li><a href="chatbox.html">Movie Reccomendation</a></li>
+                  <li><a href="views/popular.html">Popular Movies</a></li>
                 </ul>
               </div>
             </div>
