--- a/views/chatbox.html
+++ b/views/chatbox.html
@@ -30,7 +30,7 @@
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                   <li><a href="chatbox.html">Movie Reccomendation</a></li>
-                  <li><a href="views/popular.html">Popular Movies</a></li>
+                  <li><a href="popular.html">Popular Movies</a></li>
                 </ul>
               </div>
             </div>
