--- a/views/chatbox.html
+++ b/views/chatbox.html
@@ -42,7 +42,10 @@
             <div class="row">
                 <div class="col-sm-9 text-left">
                     <div class="row">
-                      <div id="recommendations" class="bg-3 text-left" style="margin-top: 20px;"></div>                                                 
+                      <div id="loading-spinner">
+                        <div class="spinner"></div>
+                      </div>
+                      <div id="recommendations" class="bg-3 text-left" style="margin-top: 20px;"></div>                                                
                     </div>
                 </div> 
                 
