--- a/views/popular.html
+++ b/views/popular.html
@@ -36,12 +36,12 @@
             </div>
         </nav>
         
-        <div class="container-fluid bg-3 text-center">    
+        <div class="container-fluid bg-4 text-center">    
             <h3 class="margin"></h3><br>
             <div class="row">
-                <div class="col-sm-9 text-left">
+                <div class="col-sm-9 text-center">
                     <div class="row">
-                      <div id="recommendations" class="bg-3 text-left" style="margin-top: 20px;"></div>                                                 
+                      <div id="recommendations" class="bg-3 text-center" style="margin-top: 20px;"></div>                                                 
                     </div>
                 </div>  
             </div>  
