--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,7 @@ p {font-size: 16px;}
     color: #f0dfcc;
 }
 .bg-3 { 
-    background-color: linear-gradient(to bottom, #f0dfcc, #D8F6B4);
+    background-color: #f0dfcc;
     color: #a56f29;
 }
 .bg-4 { 
