--- a/views/popular.html
+++ b/views/popular.html
@@ -39,7 +39,7 @@
         <div class="container-fluid bg-4 text-center">    
             <h3 class="margin"></h3><br>
             <div class="row">
-                <div class="col-sm-9 text-center">
+                <div class="col-sm-9 text-center mx-auto">
                     <div class="row">
                       <div id="recommendations" class="bg-3 text-center" style="margin-top: 20px;"></div>                                                 
                     </div>
